# RS003-kompozitor

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.qml  qml.qrc
playback/: playback.cpp  playback.hpp  sound_manager.cpp  sound_manager.hpp
src/: main.cpp
src/playback/: microphone_recorder.cpp  microphone_recorder.hpp  play_manager.cpp  play_manager.hpp  playback.cpp  playback.hpp  record_manager.cpp  record_manager.hpp  sound_manager.cpp  sound_manager.hpp
src/qml/: BlackPianoButton.qml  NoteTrack.qml  SampleTrack.qml  Track.qml  TrackNote.qml  WhitePianoButton.qml  main.qml
src/ui_model/: main_model.cpp  main_model.hpp  note_track.hpp  sample_track.hpp  track.cpp  track.hpp  track_note.cpp  track_note.hpp  tracks_list_model.cpp  tracks_list_model.hpp
timer/: mytimer.cpp  mytimer.hpp
ui_model/: main_model.cpp  main_model.hpp
